Fix(style) Checkbox group visibility

--- a/src/styles/unibase/forms/_checkboxes.sass
+++ b/src/styles/unibase/forms/_checkboxes.sass
@@ -204,7 +204,3 @@ uni-radiogroup-input
         padding-bottom: 1.3rem
         padding-right: 2.5rem
         margin-left: 0
-
-        &:before,
-        &:after
-            margin-top: -1.4rem
